--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,12 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
+# web storm project files
+.idea
+
 # dependencies
 /node_modules
 /.pnp
 .pnp.js
-.idea
 # testing
 /coverage
 
