--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,19 +1,19 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "BlackJack",
+  "name": "21 BlackJack",
   "icons": [
     {
-      "src": "playing-cards.png",
+      "src": "cards.png",
       "sizes": "64x64 32x32 24x24 16x16",
       "type": "image/x-icon"
     },
     {
-      "src": "playing-cards.png",
+      "src": "cards.png",
       "type": "image/png",
       "sizes": "192x192"
     },
     {
-      "src": "playing-cards.png",
+      "src": "cards.png",
       "type": "image/png",
       "sizes": "512x512"
     }
